# rkdeveloptool-win32

./: .gitignore  CMakeLists.txt  DefineHeader.h  RKBoot.cpp  RKBoot.h  RKComm.cpp  RKComm.h  RKDevice.cpp  RKDevice.h  RKImage.cpp  RKImage.h  RKLog.cpp  RKLog.h  RKScan.cpp  RKScan.h  config.h  config.h.in  flash.bat  main.cpp
win32/: dirent.h  unistd.h  win32.h
